# RPP

./: БеденкоТТП41_РПП.docx
OpenMP/: one_thread.cpp  open_mp_main.cpp  output.txt  randoms10.txt
RPP_1/: CMakeLists.txt  open_mp_main.cpp  output.txt  randoms10.txt
RPP_2/: CMakeLists.txt  mpi_main.cpp  output.txt
mpi/: ParallelSortedArray.txt  mpi_main.cpp  randoms.txt
